test/integration/cli-args/sstanc.t/fail/12_jacobian_plus_equals.stan
// Compile with: stanc --sstanc --sstan-protect=y
data {
  real y;
}
transformed parameters {
  jacobian += 1;
}
model {
  y ~ normal(0, 1);
}
